<resources>
    <string name="app_name">FirebaseAuth</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password</string>
    <string name="send_reset_mail_fail">Failed to send reset email!</string>
    <string name="send_reset_mail_success">We have sent an email to reset your password!</string>
    <string name="email_update_success">Email address is updated. Please login with new email!</string>
    <string name="email_update_fail">Failed to update email!</string>
    <string name="password_update_success">Password is updated. Please login with new password!</string>
    <string name="password_update_fail">Failed to update password!</string>
    <string name="account_delete_success">Your account is deleted. Create a account now!</string>
    <string name="account_delete_fail">Failed to delete your account!</string>
    <string name="registration_success">Registration successful</string>
    <string name="registration_fail">Registration failed</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_password">New Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">LOGIN</string>
    <string name="not_a_member">Not a member? Register now!</string>
    <string name="already_registered">Already registered. Login!</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="cancel">Cancel</string>
    <string name="new_email">New Email</string>
    <string name="change">Change</string>
    <string name="send">Send</string>
    <string name="remove">Remove</string>
    <string name="logout">Log Out</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We need your Email to sent you password reset instructions.</string>
    <string name="enter_new_email">Enter New Email</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
</resources>
